--- a/report/DetailedArchitecture.tex
+++ b/report/DetailedArchitecture.tex
@@ -12,7 +12,7 @@ The main topics we take over in this Section can be summarized as follows:
  \item The developer's intervention
 \end{enumerate}
 
-% FIXME: TO REMOVE LATER
+% TO REMOVE LATER
 % \begin{itemize}
 %  \item *The M2T tool we use (Acceleo)
 %  %\item The additional components (A WebService)
