--- a/report/Discussion.tex
+++ b/report/Discussion.tex
@@ -1,6 +1,6 @@
 \section{Discussion}
 \label{Discussion}
-\textbf{FIXME: La conclusione la incorporo come subsection della discussion o la tengo separata? }\\
+%\textbf{: La conclusione la incorporo come subsection della discussion o la tengo separata? }\\
 In this section we discuss the results of the transformation, its feasibility and the possible future developments. We also present a use case to show how the generator works on a simple transformation.
 \subsection{Emulate a BPEL Orchestration in Java}
 \label{sec:OrchestrEmulation}
