--- a/report/Framework.tex
+++ b/report/Framework.tex
@@ -1,6 +1,6 @@
-\section{Implementation} %o ALTRO NOME? FIXME 
+\section{Implementation} %o ALTRO NOME?
 \label{sec:TheFramework}
-%\textbf{FIXME forse rimuovere la sezione e mettere queste info da qualche altra parte, tipo alla fine della Detailed Architecture Section?} \\
+%\textbf{forse rimuovere la sezione e mettere queste info da qualche altra parte, tipo alla fine della Detailed Architecture Section?} \\
 This section briefly presents the technologies and the tools we use for our transformation. Later we provide some small examples of how we use the Acceleo technology in the transformation.
 Moreover, the section describes some specific solutions we applied to overcome the issues arisen during the implementation.
 At last, we explain how to step-by-step run a transformation with our generator.
@@ -162,7 +162,7 @@ public void setOutput(SimpleProcessResponse value) {
 \subsection{Issues encountered and proposed solutions}
 \label{sec:issues}
 Here we list the issues, we encountered, during the implementation of our BPEL to Java transformation using the Acceleo generator. We also provide the proposed strategies to solve the issues.
-% FIXME: Modify the list of topics here:
+%  Modify the list of topics here:
 % \begin{itemize}
 %  \item Acceleo cannot get more than one input file, that means we cannot read the information from the WSDL file(s).
 %   \subitem The variables types have to be input manually
